expected/main/lc/illegal-data-lhs3.err
ERROR: "actual/main/lc/illegal-data-lhs3.llc", line 3
  data T a a = A | B
         ^
Type parameter "a" is used multiple times

ERROR: Aborting after previously reported error

